--- a/app/src/main/res/layout/fragment_contest_detail_result.xml
+++ b/app/src/main/res/layout/fragment_contest_detail_result.xml
@@ -31,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:scaleType="centerInside"
                 android:adjustViewBounds="true"
-                android:src="@drawable/rainbow" />
+                 />
 
             <LinearLayout
                 android:id="@+id/host"
@@ -565,7 +565,6 @@
                             android:scaleType="centerInside"
                             android:adjustViewBounds="true"
                             android:id="@+id/jpic1"
-                            android:src="@drawable/rainbow"
                             android:layout_weight="1"/>
                         <ImageView
                             android:visibility="gone"
@@ -578,7 +577,7 @@
                             android:layout_weight="1"
                             android:scaleType="centerInside"
                             android:adjustViewBounds="true"
-                            android:src="@drawable/rainbow"/>
+                            />
 
                     </TableRow>
 
@@ -661,7 +660,7 @@
                             android:layout_width="100dp"
                             android:scaleType="centerInside"
                             android:adjustViewBounds="true"
-                            android:src="@drawable/rainbow"                            android:layout_weight="1"/>
+                                                     android:layout_weight="1"/>
 
 
                     </TableRow>
