--- a/app/src/main/res/layout/fragment_edit_contest.xml
+++ b/app/src/main/res/layout/fragment_edit_contest.xml
@@ -32,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:scaleType="centerInside"
                 android:adjustViewBounds="true"
-                android:src="@drawable/rainbow" />
+                />
 
             <LinearLayout
                 android:id="@+id/host"
@@ -596,7 +596,6 @@
                             android:scaleType="centerInside"
                             android:adjustViewBounds="true"
                             android:id="@+id/jpic1"
-                            android:src="@drawable/rainbow"
                             android:layout_weight="1"/>
                         <ImageView
                             android:visibility="gone"
@@ -609,7 +608,7 @@
                             android:layout_weight="1"
                             android:scaleType="centerInside"
                             android:adjustViewBounds="true"
-                            android:src="@drawable/rainbow"/>
+                            />
 
                     </TableRow>
 
@@ -692,7 +691,7 @@
                             android:layout_width="100dp"
                             android:scaleType="centerInside"
                             android:adjustViewBounds="true"
-                            android:src="@drawable/rainbow"                            android:layout_weight="1"/>
+                                                     android:layout_weight="1"/>
 
 
                     </TableRow>
