--- a/app/src/main/res/layout/activity_joining_form.xml
+++ b/app/src/main/res/layout/activity_joining_form.xml
@@ -217,6 +217,20 @@ android:text="You are already a Participant in this contest."
     android:layout_marginTop="50dp"
     android:textColor="#F44336"
     android:layout_alignParentRight="true" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/decline"
+        android:visibility="gone"
+        android:text="You are not allowed to participant in this contest as either you are host or jury member."
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:background="#CC333232"
+        android:textSize="18sp"
+        android:layout_marginTop="50dp"
+        android:textColor="#F44336"
+        android:layout_alignParentRight="true" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
