--- a/app/src/main/res/layout/activity_post_photo.xml
+++ b/app/src/main/res/layout/activity_post_photo.xml
@@ -29,14 +29,14 @@
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="20dp"
                     android:layout_marginRight="20dp"
-                    android:src="@drawable/ic_backarrow" />
+                    android:src="@drawable/ic_back_black_arrow" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="5dp"
-                    android:layout_toRightOf="@+id/backarrow"
+                    android:layout_centerHorizontal="true"
                     android:text="Post Photo"
                     android:textColor="#000000" />
 
@@ -49,9 +49,9 @@
                     android:layout_centerVertical="true"
                     android:layout_marginRight="15dp"
                     android:text="Post"
-                    android:textColor="@color/dot_dark_screen3"
+                    android:textColor="@color/scheme8"
                     android:textSize="18sp"
-                    android:textStyle="bold" />
+                    />
 
 
             </RelativeLayout>
@@ -71,13 +71,15 @@
             android:id="@+id/inputCaption"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_below="@+id/imageshare"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             android:backgroundTint="@color/white"
+
             android:hint="Enter and Interesting Title or Caption"
             android:imeOptions="actionNext"
             android:inputType="textFilter"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textColorHint="@color/grey"
             android:textSize="18sp" />
 
@@ -91,21 +93,23 @@
         <com.orion.orion.util.SquareImageView
             android:id="@+id/imageshare"
             android:layout_width="match_parent"
+            android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/captionLine"
             android:layout_centerHorizontal="true"/>
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
             android:layout_gravity="bottom|end"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
             android:text="Pick Photo"
+            android:layout_margin="20dp"
             android:textAllCaps="false"
+            android:layout_centerHorizontal="true"
             android:textColor="@color/white"
-            app:backgroundTint="@color/brown"
+            app:backgroundTint="@color/scheme8"
             app:icon="@drawable/ic_baseline_photo_library_24"
             app:iconTint="@color/white" />
 
