--- a/app/src/main/res/layout/activity_post_video.xml
+++ b/app/src/main/res/layout/activity_post_video.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -27,14 +28,14 @@
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="20dp"
                     android:layout_marginRight="20dp"
-                    android:src="@drawable/ic_backarrow" />
+                    android:src="@drawable/ic_back_black_arrow" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="5dp"
-                    android:layout_toRightOf="@+id/backarrow"
+                    android:layout_centerHorizontal="true"
                     android:text="Post Video"
                     android:textColor="#000000" />
 
@@ -47,9 +48,9 @@
                     android:layout_centerVertical="true"
                     android:layout_marginRight="15dp"
                     android:text="Post"
-                    android:textColor="@color/dot_dark_screen3"
+                    android:textColor="@color/scheme8"
                     android:textSize="18sp"
-                    android:textStyle="bold" />
+                     />
 
 
             </RelativeLayout>
@@ -72,12 +73,15 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:backgroundTint="@color/white"
-            android:hint="Enter and Interesting Title or Caption"
+            android:layout_below="@id/videoBox"
+            android:background="@drawable/rectangular_border"
+
+            android:hint="Enter Title or Caption"
             android:imeOptions="actionNext"
             android:inputType="textFilter"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textColorHint="@color/grey"
-            android:textSize="18sp" />
+            android:textSize="15sp" />
 
         <View
             android:id="@+id/captionLine"
@@ -85,37 +89,59 @@
             android:layout_height="2dp"
             android:layout_below="@+id/inputCaption"
             android:background="#E5E6EB" />
-
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/captionLine"
-            android:layout_marginTop="10dp"
-            android:paddingVertical="5dp"
+            android:orientation="horizontal"
+            android:weightSum="3"
+            android:id="@+id/relThumbnail">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/thumbtext"
+            android:layout_margin="20dp"
+            android:layout_weight="1.5"
+            android:layout_centerVertical="true"
+
             android:text="Pick a Thumbnail:"
-            android:textColor="@color/brown"
-            android:textSize="24sp" />
+            android:textColor="#03A9F4"
+            android:textSize="15sp" />
 
         <ImageView
             android:id="@+id/thumbnailButton"
-            android:layout_width="40sp"
-            android:layout_height="40sp"
-            android:layout_below="@+id/captionLine"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="10dp"
-            android:background="@color/orange"
-            android:paddingVertical="5dp"
-            android:src="@drawable/ic_baseline_add_24"
-            android:layout_alignParentRight="true" />
+            android:layout_width="0dp"
+            android:layout_weight="0.5"
+            android:layout_height="20sp"
+            android:layout_marginTop="20dp"
+            android:layout_centerVertical="true"
 
+
+            android:background="@color/scheme8"
+            android:src="@drawable/ic_add"
+            />
+            <ImageView
+                android:id="@+id/thumbnailImage"
+                android:layout_width="20dp"
+                android:layout_weight="1"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_star_black"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="10dp"
+
+
+
+                />
+        </LinearLayout>
         <androidx.cardview.widget.CardView
             android:id="@+id/videoBox"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:layout_below="@+id/thumbnailButton"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:gravity="center_horizontal"
             android:visibility="invisible"
+
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="10dp">
 
@@ -123,8 +149,9 @@
             <com.google.android.exoplayer2.ui.PlayerView
                 android:id="@+id/player_view"
                 android:layout_width="match_parent"
+
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
+                android:layout_gravity="center_horizontal|center_vertical"
                 android:backgroundTint="@color/black"
                 android:background="@drawable/square"
                 android:visibility="visible"
@@ -140,10 +167,9 @@
 
             <com.orion.orion.util.SquareImageView
                 android:id="@+id/thumbnail"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:scaleType="fitXY"
                 android:visibility="visible" />
 
             <ImageView
@@ -193,12 +219,13 @@
             android:id="@+id/progress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/videoBox"
             android:layout_marginTop="10dp"
             android:gravity="center_horizontal"
-            android:textColor="@color/colorPrimary"
-            android:textSize="32sp"
-            android:visibility="invisible"
+            android:textColor="@color/grey"
+            android:padding="10dp"
+            android:textSize="15sp"
+            android:layout_below="@id/videoBox"
+            android:visibility="gone"
             tools:text="Progress" />
 
         <ProgressBar
@@ -218,11 +245,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_gravity="bottom|end"
             android:text="Pick Video"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            app:backgroundTint="@color/brown"
+            app:backgroundTint="@color/scheme8"
             app:icon="@drawable/ic_baseline_video_library_24"
             app:iconTint="@color/white" />
 
