--- a/app/src/main/res/layout/grid_image_item.xml
+++ b/app/src/main/res/layout/grid_image_item.xml
@@ -17,9 +17,20 @@
     android:scaleType="centerCrop"
     android:id="@+id/image"
     app:layout_constraintTop_toTopOf="parent"
-    android:src="@drawable/ic_star"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintDimensionRatio="W,1:1"
+            android:scaleType="centerCrop"
+            android:id="@+id/progress"
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/load"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
