--- a/app/src/main/res/layout/layout_contest_item_small.xml
+++ b/app/src/main/res/layout/layout_contest_item_small.xml
@@ -19,7 +19,12 @@
         android:layout_width="100dp"
         android:layout_height="70dp"
         android:id="@+id/poster"
-        android:src="@drawable/rainbow"/>
+        />
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="70dp"
+            android:id="@+id/progress"
+            android:src="@drawable/load"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
