--- a/app/src/main/res/layout/layout_view_post.xml
+++ b/app/src/main/res/layout/layout_view_post.xml
@@ -189,6 +189,15 @@
                         android:layout_centerHorizontal="true"
                         android:scaleType="centerInside"
                         />
+                    <com.orion.orion.util.SquareImageView
+                        android:id="@+id/progress"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:scaleType="centerInside"
+                        android:visibility="gone"
+                        android:src="@drawable/load"
+                        />
 
                 </androidx.cardview.widget.CardView>
 
