--- a/app/src/main/res/layout/promote_item.xml
+++ b/app/src/main/res/layout/promote_item.xml
@@ -23,7 +23,7 @@
         app:civ_border_width="2dp"
         app:civ_border_color="@color/scheme8"
         android:layout_gravity="center"
-        android:src="@drawable/ic_star"
+        android:src="@drawable/load"
 android:layout_marginTop="5dp"
         android:id="@+id/story_photo"/>
     <de.hdodenhof.circleimageview.CircleImageView
